refactor: add binary targets

--- a/fs/Cargo.toml
+++ b/fs/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
-[lib]
+[[bin]]
 name = "fs"
-crate-type = ["staticlib"]
+test = false
+bench = false
+
+[lib]
 test = false
 bench = false
 
