--- a/servers/vm/Cargo.toml
+++ b/servers/vm/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "do_nothing"
+name = "vm"
 version = "0.1.0"
 edition = "2018"
 
 [lib]
-name = "do_nothing"
+name = "vm"
 crate-type = ["staticlib"]
 test = false
 bench = false
 
 [dependencies]
-ralib = { path = "../ralib" }
-
+linked_list_allocator = "0.9.0"
+ralib = { path = "../../ralib", default-features = false }
