--- a/servers/xhci/Cargo.toml
+++ b/servers/xhci/Cargo.toml
@@ -22,9 +22,9 @@ log = "0.4.14"
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
 os_units = "0.4.0"
-page_box = { path = "../page_box" }
-ralib = { path = "../ralib" }
+page_box = { path = "../../page_box" }
+ralib = { path = "../../ralib" }
 spinning_top = { version = "0.2.4", features = ["nightly"] }
-syscalls = { path = "../syscalls" }
+syscalls = { path = "../../syscalls" }
 x86_64 = { version = "0.14.3", default-features = false }
 xhci = "0.8.2"
