--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -18,7 +18,7 @@ bench = false
 log = "0.4.14"
 uefi = { version = "0.11.0", features = ["logger"] }
 uefi-services = "0.8.0"
-common = { path = "../common/" }
+common = { path = "../libs/common/" }
 x86_64 = "0.14.3"
 elf_rs = "0.1.3"
 os_units = "0.4.0"
