--- a/servers/pm/Cargo.toml
+++ b/servers/pm/Cargo.toml
@@ -11,7 +11,7 @@ test = false
 bench = false
 
 [dependencies]
-message = { path = "../../message" }
+message = { path = "../../libs/message" }
 num-traits = { version = "0.2.14", default-features = false }
-ralib = { path = "../../ralib" }
-syscalls = { path = "../../syscalls" }
+ralib = { path = "../../libs/ralib" }
+syscalls = { path = "../../libs/syscalls" }
