--- a/servers/port_server/Cargo.toml
+++ b/servers/port_server/Cargo.toml
@@ -12,9 +12,9 @@ bench = false
 
 [dependencies]
 log = "0.4.14"
-message = { path = "../../message" }
+message = { path = "../../libs/message" }
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
-ralib = { path = "../../ralib" }
-syscalls = { path = "../../syscalls" }
+ralib = { path = "../../libs/ralib" }
+syscalls = { path = "../../libs/syscalls" }
 x86_64 = "0.14.3"
