--- a/servers/vm/Cargo.toml
+++ b/servers/vm/Cargo.toml
@@ -11,4 +11,4 @@ bench = false
 
 [dependencies]
 linked_list_allocator = "0.9.0"
-ralib = { path = "../../ralib", default-features = false }
+ralib = { path = "../../libs/ralib", default-features = false }
