--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@
 version: 2
 updates:
 - package-ecosystem: cargo
-  directory: "/common"
+  directory: "/libs/common"
   schedule:
     interval: daily
     time: "20:00"
@@ -30,7 +30,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/apps"
+  directory: "/libs/page_box"
   schedule:
     interval: daily
     time: "20:00"
@@ -39,7 +39,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/page_box"
+  directory: "/libs/syscalls"
   schedule:
     interval: daily
     time: "20:00"
@@ -48,7 +48,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/syscalls"
+  directory: "/libs/terminal"
   schedule:
     interval: daily
     time: "20:00"
@@ -57,7 +57,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/terminal"
+  directory: "/libs/ralib"
   schedule:
     interval: daily
     time: "20:00"
@@ -66,7 +66,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/ralib"
+  directory: "/servers/fs"
   schedule:
     interval: daily
     time: "20:00"
@@ -75,7 +75,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/fs_server"
+  directory: "/libs/frame_manager"
   schedule:
     interval: daily
     time: "20:00"
@@ -84,7 +84,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/frame_manager"
+  directory: "/libs/message"
   schedule:
     interval: daily
     time: "20:00"
@@ -93,7 +93,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/message"
+  directory: "/libs/pm"
   schedule:
     interval: daily
     time: "20:00"
@@ -102,7 +102,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/pm"
+  directory: "/servers/port_server"
   schedule:
     interval: daily
     time: "20:00"
@@ -111,16 +111,7 @@ updates:
   - dependency-type: direct
   - dependency-type: indirect
 - package-ecosystem: cargo
-  directory: "/port_server"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/xhci"
+  directory: "/servers/xhci"
   schedule:
     interval: daily
     time: "20:00"
