--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,7 +22,6 @@ bench = false
 [dependencies]
 common = { path = "../libs/common" }
 conquer-once = { version = "0.3.2", default-features = false }
-spinning_top = "0.2.4"
 x86_64 = { version = "0.14.3", default-features = false }
 linked_list_allocator = "0.9.0"
 log = "0.4.14"
@@ -43,6 +42,7 @@ frame_manager = { path = "../libs/frame_manager" }
 cstr_core = "0.2.3"
 xmas-elf = "0.7.0"
 uart_16550 = "0.2.14"
+spinning_top = { version = "0.2.4", features = ["nightly"] }
 
 [build-dependencies]
 cc = "1.0.68"
