--- a/servers/port_server/Cargo.toml
+++ b/servers/port_server/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.14"
 message = { path = "../../libs/message" }
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
+raheap = { path = "../../libs/raheap" }
 ralib = { path = "../../libs/ralib" }
 syscalls = { path = "../../libs/syscalls" }
 x86_64 = "0.14.4"
