--- a/servers/xhci/Cargo.toml
+++ b/servers/xhci/Cargo.toml
@@ -23,6 +23,7 @@ num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
 os_units = "0.4.2"
 page_box = { path = "../../libs/page_box" }
+raheap = { path = "../../libs/raheap" }
 ralib = { path = "../../libs/ralib" }
 spinning_top = { version = "0.2.4", features = ["nightly"] }
 syscalls = { path = "../../libs/syscalls" }
