--- a/libs/raheap/Cargo.toml
+++ b/libs/raheap/Cargo.toml
@@ -3,6 +3,11 @@ name = "raheap"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "raheap"
+test = false
+bench = false
+
 [dependencies]
 conquer-once = { version = "0.3.2", default-features = false }
 linked_list_allocator = "0.9.0"
