--- a/libs/terminal/Cargo.toml
+++ b/libs/terminal/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+bit_field = "0.10.1"
 common = { path = "../common" }
 conquer-once = { version = "0.3.2", default-features = false }
+font8x8 = { version = "0.3.1", features = ["unicode"], default-features = false }
 log = "0.4.14"
 rgb = "0.8.27"
 spinning_top = { version = "0.2.4", features = ["nightly"] }
