--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -22,3 +22,4 @@ common = { path = "../libs/common/" }
 x86_64 = "0.14.4"
 elf_rs = "0.1.3"
 os_units = "0.4.2"
+predefined_mmap = { path = "../libs/predefined_mmap" }
