fix: `Cargo.toml`

--- a/libs/predefined_mmap/Cargo.toml
+++ b/libs/predefined_mmap/Cargo.toml
@@ -1,9 +1,9 @@
+cargo-features = ["edition2021"]
+
 [package]
 name = "predefined_mmap"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 conquer-once = { version = "0.3.2", default-features = false }
