--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -24,3 +24,5 @@ elf_rs = "0.1.3"
 os_units = "0.4.2"
 predefined_mmap = { path = "../libs/predefined_mmap" }
 boot_info = { path = "../libs/boot_info" }
+vek = { version = "0.15.1", features = ["libm"], default-features = false }
+static_assertions = "1.1.0"
