--- a/libs/frame_manager/Cargo.toml
+++ b/libs/frame_manager/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 bit_field = "0.10.1"
+boot_info = { path = "../boot_info" }
 os_units = "0.4.2"
-uefi = "0.11.0"
 x86_64 = "0.14.4"
