ci: run `cargo test --workspace` instead
The script fails but I do not know why.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,4 +147,4 @@ jobs:
       run: cp /usr/share/OVMF/OVMF_* .
 
     - name: Test
-      run: ./test_per_crate.sh
+      run: cargo test --workspace
