ci: use the workspace

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,121 +1,6 @@
-# SPDX-License-Identifier: GPL-3.0-or-later
-
 version: 2
 updates:
-- package-ecosystem: cargo
-  directory: "/libs/common"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/bootx64"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/kernel"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/page_box"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/syscalls"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/terminal"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/ralib"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/servers/fs"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/frame_manager"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/message"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/libs/pm"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/servers/port_server"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
-- package-ecosystem: cargo
-  directory: "/servers/xhci"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  allow:
-  - dependency-type: direct
-  - dependency-type: indirect
+  - package-ecosystem: cargo
+    directory: /
+    schedule:
+      interval: daily
