chore: set licenses

--- a/libs/message/Cargo.toml
+++ b/libs/message/Cargo.toml
@@ -3,5 +3,4 @@ name = "message"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
-
-[dependencies]
+license = "GPL-3.0-or-later"
