--- a/libs/terminal/Cargo.toml
+++ b/libs/terminal/Cargo.toml
@@ -3,6 +3,7 @@ name = "terminal"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
 
 [dependencies]
 bit_field = "0.10.1"
