--- a/libs/frame_manager/Cargo.toml
+++ b/libs/frame_manager/Cargo.toml
@@ -3,8 +3,7 @@ name = "frame_manager"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0-or-later"
 
 [dependencies]
 bit_field = "0.10.1"
