ci: use `make test`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,7 +90,7 @@ jobs:
 
     - name: Test
       timeout-minutes: 10
-      run: ./run_qemu.sh -t
+      run: make test
   test_per_crate:
     runs-on: ubuntu-latest
 
